reorganized project structure part 2